# universe-deprecated

./: .env  .gitlab-ci.yml  Cargo.toml  docker-compose.e2e.yml  docker-compose.services.yml  docker-compose.yml  run-e2e.sh
e2e/: .env  (+5 more)
migrations/: Cargo.toml
migrations/src/: lib.rs  migrations.rs  postgres.rs
migrations/tests/: postgres_tests.rs
migrations/tests/migrations/invalid/: 0002_data.sql
migrations/tests/migrations/multiple/: 0001_table.sql  0002_data.sql
migrations/tests/migrations/working/: 0001_table.sql
service/crates/authentication/: Cargo.toml
service/crates/authentication/src/: access_token.rs  access_token_id.rs  encoded_access_token.rs  encoder.rs  lib.rs
service/crates/database/: Cargo.toml
service/crates/database/src/: builder.rs  database.rs  health.rs  lib.rs  migrate.rs  postgres.rs
service/crates/database/test_migrations/full/: 00001-first.sql  00002-second.sql
service/crates/database/test_migrations/multiple/: 00001-multiple.sql
service/crates/entity/: Cargo.toml
service/crates/entity/src/: identity.rs  lib.rs  pagination.rs  sorts.rs
service/crates/templates/: Cargo.toml
service/crates/templates/src/: builder.rs  lib.rs  messages.rs  renderer.rs  template.rs
service/crates/templates/src/snapshots/: tests__renderer_i18n.snap
service/crates/test_database_container/: Cargo.toml
service/crates/test_database_container/src/: container.rs  lib.rs  postgres.rs
service/crates/test_database_wrapper/: Cargo.toml
service/crates/test_database_wrapper/src/: lib.rs
service/crates/testdata/: Cargo.toml
service/crates/testdata/src/: lib.rs  testdata.rs  user.rs  world.rs
service/crates/universe/: Cargo.toml
service/crates/universe/src/: main.rs  settings.rs
service/crates/users/: Cargo.toml
service/crates/users/src/: builder.rs  lib.rs  testdata.rs
service/crates/users/src/database/: mod.rs
service/crates/users/src/model/: display_name.rs  email_address.rs  mod.rs  password.rs  user.rs  user_id.rs  username.rs
service/crates/users/src/postgres/: repository.rs
service/crates/users/src/service/: implementation.rs  mod.rs  repository.rs  service.rs
service/crates/webapp/: Cargo.toml
service/crates/webapp/integration/: assert.rs  health.rs  service.rs  tests.rs
service/crates/webapp/integration/authentication/: post.rs
service/crates/webapp/integration/users/: get.rs  mod.rs  patch.rs  post.rs  validate_username.rs
service/crates/webapp/integration/worlds/: search.rs
service/crates/webapp/src/: headers.rs  lib.rs  main.rs  page.rs  request_id.rs  service.rs
service/crates/webapp/src/authentication/: access_token.rs  authorizer.rs  get.rs  mod.rs  model.rs  post.rs  routes.rs
service/crates/webapp/src/database/: migrate.rs  postgres.rs
service/crates/webapp/src/health/: healthchecker.rs  mod.rs  routes.rs
service/crates/webapp/src/problem/: common.rs  mod.rs  problem.rs  validation.rs
service/crates/webapp/src/server/: mod.rs  request_id.rs
service/crates/webapp/src/service/: database.rs  mod.rs  templates.rs  users.rs
service/crates/webapp/src/users/: get.rs  mod.rs  model.rs  patch.rs  post.rs  problems.rs  routes.rs  testdata.rs
service/crates/webapp/src/worlds/: mod.rs  model.rs  routes.rs  search.rs
service/crates/webapp/tests/: home_page.rs  login.rs  service.rs
service/crates/webapp/tests/snapshots/: service__login_test_render_start_login_page.snap  service__login_test_submit_blank_username.snap  (+2 more)
service/crates/worlds/: Cargo.toml
templates/: Cargo.toml  home.tera  index.html  index.tera
templates/layout/: header.tera  landing.tera  page.tera
templates/login/: login.tera  register.tera  start.tera
templates/src/: lib.rs  messages.rs  renderer.rs  templates.rs
webapp/: .env  Cargo.toml  Dockerfile  package.json
webapp/docker/: start.sh
webapp/public/: config.js  config.js.template  index.html
webapp/src/: App.tsx  api.test.ts  api.ts  dummy.test.ts  entity.rs  index.tsx  lib.rs  main.rs  server.rs  setupTests.ts
webapp/src/api/: api.test.ts  api.ts  index.ts  problem.ts  validation.ts
webapp/src/authentication/: state.ts
webapp/src/database/: database.rs  migrate.rs  mod.rs  postgres.rs  test.rs
webapp/src/entity/: mod.rs
webapp/src/header/: index.tsx
webapp/src/home/: httpadapter.rs
webapp/src/home/httpadapter/: mod.rs
webapp/src/i18n/: index.ts  messages.json
webapp/src/login/: actions.test.ts  actions.ts  effects.test.ts  effects.ts  httpadapter.rs  mod.rs  state.ts
webapp/src/login/__snapshots__/: actions.test.ts.snap
webapp/src/login/httpadapter/: form.rs  get.rs  mod.rs  process.rs  register.rs  start.rs
webapp/src/overmind/: index.ts  test.ts
webapp/src/overmind/authentication/: actions.ts  effects.ts  state.ts
webapp/src/overmind/login/: actions.test.ts  actions.ts  effects.test.ts  effects.ts  index.ts  model.ts  state.ts
webapp/src/overmind/users/: actions.ts  effects.ts  model.ts  state.ts
webapp/src/server/: renderer.rs
webapp/src/ui/: App.tsx  HomePage.tsx  app.tsx  homePage.test.tsx  homePage.tsx  landing.tsx  landingPage.tsx  loader.test.tsx  loader.tsx  loggedIn.test.tsx  loggedIn.tsx
webapp/src/ui/__snapshots__/: homePage.test.tsx.snap  loader.test.tsx.snap  loggedIn.test.tsx.snap
webapp/src/ui/components/: breadcrumbs.tsx  loader.tsx
webapp/src/ui/header/: header.test.tsx  header.tsx  index.tsx  login.tsx  userMenu.tsx  usermenu.tsx
webapp/src/ui/login/: authenticate.test.tsx  authenticate.tsx  index.tsx  loggedIn.test.tsx  loggedIn.tsx  register.test.tsx  register.tsx  start.test.tsx  start.tsx
webapp/src/ui/profile/: index.test.tsx  index.tsx  password.test.tsx  password.tsx  profile.test.tsx  profile.tsx
webapp/src/users/: api.test.ts  api.ts  index.ts  mod.rs  model.ts  password.rs  postgres_repository.rs  service.rs  user.rs  userContext.tsx
webapp/src/users/model/: mod.rs  password.rs  user.rs  user_id.rs  username.rs
webapp/src/users/service/: implementation.rs
webapp/templates/: index.tera
webapp/templates/layout/: landing.tera
webapp/templates/login/: login.tera  register.tera
(+185 files in other folders)
