[package]
name = "universe"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "universe"

[[bin]]
name = "universe"

[dependencies]
rocket = "0.4.2"
env_logger = "0.7.1"
log = "0.4.8"
tera = "0.11"
serde = "1.0.103"
serde_json = "1.0.42"
fluent = "0.8.0"
unic-langid = "0.6"
accept-language = "1.2.2"
rocket_contrib = "0.4.2"
dotenv = "0.15.0"
