[package]
name = "universe_templates"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
log = "0.4.8"
tera = "0.11"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
fluent = "0.8.0"
unic-langid = "0.6"
accept-language = "1.2.2"

[dev-dependencies]
speculate = "0.1.2"
