[package]
name = "universe"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "universe"

[[bin]]
name = "universe"

[dependencies]
rocket = "0.4.2"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
rocket_contrib = "0.4.2"
dotenv = "0.15.0"
uuid = { version = "0.5", features = ["v4"] }
mockall = "0.5.2"
r2d2 = "0.8.7"
r2d2_postgres = "0.14.0"
postgres = { version = "0.15.2", features = ["with-uuid", "with-chrono"] }
universe_templates = { path = "../templates" }
universe_migrations = { path = "../migrations" }
chrono = "0.4.10"
bcrypt = "0.6.1"

[dev-dependencies]
speculate = "0.1.2"
testcontainers = "0.8.1"
lazy_static = "1.4.0"
