[package]
name = "universe"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "universe"

[[bin]]
name = "universe"

[dependencies]
serde = "1.0.103"
serde_json = "1.0.44"
postgres = { version="0.17.0-alpha.2", features=["with-uuid-0_8"]}
bytes = "0.5.3"
log = "0.4.10"
env_logger = "0.7.1"
uuid = "0.8.1"
chrono = "0.4.10"
bcrypt = "0.6.1"

[dev-dependencies]
spectral = "0.6.0"
testcontainers = "0.8.1"
lazy_static = "1.4.0"
