[package]
name = "universe_authentication"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
serde = "1.0.104"
serde_json = "1.0.48"
tracing = "0.1.12"
uuid = {version = "0.8.1", features=["serde", "v4"] }

universe_users = { path = "../users" }
frank_jwt = "3.1.2"

[dev-dependencies]
spectral = "0.6.0"
test-env-log = { version = "0.2.2", default-features = false, features = ["trace"] }
tracing-log = "0.1.1"
tracing-subscriber = "0.2.1"

