[package]
name = "universe_database"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
postgres = { version="0.17.1", features=["with-uuid-0_8", "with-chrono-0_4"] }
postgres-types = { version="0.1.0", features=["derive", "with-uuid-0_8", "with-chrono-0_4"] }
r2d2 = "0.8.8"
r2d2_postgres = "0.16.0"
tracing = "0.1.12"
glob = "0.3.0"

universe_health = { path = "../health" }

[dev-dependencies]
spectral = "0.6.0"
test-env-log = { version = "0.2.2", default-features = false, features = ["trace"] }
tracing-log = "0.1.1"
tracing-subscriber = "0.2.1"

universe_test_database_container = { path = "../test_database_container"}
