[package]
name = "universe_entity"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
uuid = {version = "0.8.1", features=["serde", "v4"] }
thiserror = "1.0.11"
strum = "0.18.0"
strum_macros = "0.18.0"
unicase = "2.6.0"

[dev-dependencies]
spectral = "0.6.0"
rstest = "0.6.0"
