[package]
name = "universe_test_database_wrapper"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
postgres = { version="0.17.0", features=["with-uuid-0_8", "with-chrono-0_4"] }
postgres-types = { version="0.1.0", features=["derive", "with-uuid-0_8", "with-chrono-0_4"] }

universe_database = { path = "../database" }
universe_test_database_container = { path = "../test_database_container" }

[dev-dependencies]
