[package]
name = "universe_testdata"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
postgres = { version="0.17.1", features=["with-uuid-0_8", "with-chrono-0_4"] }
postgres-types = { version="0.1.0", features=["derive", "with-uuid-0_8", "with-chrono-0_4"] }
uuid = {version = "0.8.1", features=["serde", "v4"] }

universe_database = { path = "../database" }
universe_test_database_wrapper = { path = "../test_database_wrapper" }

[dev-dependencies]
