[package]
name = "universe"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
config = "0.10.1"
dotenv = "0.15.0"
serde = {version = "1.0.104", features=["derive"] }
tracing = "0.1.12"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.1"

universe_webapp = { path = "../webapp" }

[dev-dependencies]
