[package]
name = "universe_users"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
bcrypt = "0.6.1"
chrono = "0.4.10"
uuid = {version = "0.8.1", features=["serde", "v4"] }
serde = "1.0.104"
tracing = "0.1.12"

universe_database = { path = "../database" }
universe_entity = { path = "../entity" }

[dev-dependencies]
serde_json = "1.0.44"
spectral = "0.6.0"
