[package]
name = "universe_users"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
bcrypt = "0.6.1"
bytes = "0.5.3"
chrono = "0.4.10"
postgres = { version="0.17.0", features=["with-uuid-0_8", "with-chrono-0_4"] }
postgres-types = { version="0.1.0", features=["derive", "with-uuid-0_8", "with-chrono-0_4"] }
serde = "1.0.104"
tracing = "0.1.12"
uuid = {version = "0.8.1", features=["serde", "v4"] }

universe_database = { path = "../database" }
universe_entity = { path = "../entity" }

[dev-dependencies]
serde_json = "1.0.44"
spectral = "0.6.0"
mockall = "0.6.0"
