[package]
name = "universe_users"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
bcrypt = "0.6.1"
bytes = "0.5.4"
chrono = "0.4.10"
postgres = { version="0.17.1", features=["with-uuid-0_8", "with-chrono-0_4"] }
postgres-types = { version="0.1.0", features=["derive", "with-uuid-0_8", "with-chrono-0_4"] }
serde = "1.0.104"
tracing = "0.1.12"
uuid = {version = "0.8.1", features=["serde", "v4"] }

universe_database = { path = "../database" }
universe_entity = { path = "../entity" }
regex = "1.3.4"

[dev-dependencies]
serde_json = "1.0.48"
spectral = "0.6.0"
mockall = "0.6.0"
test-env-log = { version = "0.2.2", default-features = false, features = ["trace"] }
tracing-log = "0.1.1"
tracing-subscriber = "0.2.1"

universe_test_database_wrapper = { path = "../test_database_wrapper" }
universe_testdata = { path = "../testdata" }
