[package]
name = "universe_webapp"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
http = "0.2.0"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0.104"
serde_json = "1.0.44"
tracing = "0.1.12"

universe_database = { path = "../database" }
universe_health = { path = "../health" }
universe_users = { path = "../users" }

[dev-dependencies]
