[package]
name = "universe_webapp"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[[test]]
name = "universe_integration"
path = "integration/tests.rs"

[dependencies]
http = "0.2.0"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0.104"
serde_json = "1.0.44"
tracing = "0.1.12"

universe_database = { path = "../database" }
universe_health = { path = "../health" }
universe_users = { path = "../users" }
rocket_cors = "0.5.1"

[dev-dependencies]
insta = { version = "0.12.0", features = ["redactions"] }
spectral = "0.6.0"
test-env-log = { version = "0.2.2", default-features = false, features = ["trace"] }
tracing-log = "0.1.1"
tracing-subscriber = "0.1.6"
uuid = "0.8.1"

universe_test_database_wrapper = { path = "../test_database_wrapper" }
universe_testdata = { path = "../testdata" }
