[package]
name = "universe_webapp"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[[test]]
name = "universe_integration"
path = "integration/tests.rs"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
http = "0.2.0"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
rocket_cors = "0.5.1"
serde = "1.0.104"
serde_json = "1.0.48"
time = "0.1.42"
tracing = "0.1.13"
uuid = {version = "0.8.1", features=["serde", "v4"] }

universe_authentication = { path = "../authentication" }
universe_database = { path = "../database" }
universe_health = { path = "../health" }
universe_users = { path = "../users" }
universe_worlds = { path = "../worlds" }

[dev-dependencies]
insta = { version = "0.15.0", features = ["redactions"] }
regex = "1.3.4"
spectral = "0.6.0"
test-env-log = { version = "0.2.2", default-features = false, features = ["trace"] }
tracing-log = "0.1.1"
tracing-subscriber = "0.2.3"

universe_test_database_wrapper = { path = "../test_database_wrapper" }
universe_testdata = { path = "../testdata" }
