[package]
name = "universe_worlds"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
chrono = { version = "0.4.11", features = ["serde"] }
postgres = { version="0.17.2", features=["with-uuid-0_8", "with-chrono-0_4"] }
postgres-types = { version="0.1.1", features=["derive", "with-uuid-0_8", "with-chrono-0_4"] }
regex = "1.3.4"
serde = "1.0.104"
thiserror = "1.0.11"
tracing = "0.1.13"
uuid = {version = "0.8.1", features=["serde", "v4"] }

universe_database = { path = "../database" }
universe_entity = { path = "../entity" }
universe_users = { path = "../users" }

[dev-dependencies]
assert_matches = "1.3.0"
serde_json = "1.0.48"
spectral = "0.6.0"
mockall = "0.6.0"
test-env-log = { version = "0.2.2", default-features = false, features = ["trace"] }
tracing-log = "0.1.1"
tracing-subscriber = "0.2.3"

universe_test_database_wrapper = { path = "../test_database_wrapper" }
universe_testdata = { path = "../testdata" }
